// ============================================================
// Score Assistant — DBML Schema (Hardened Edition)
// Generated by: system-architect / dbml-generator
// ============================================================

// ── Enums ────────────────────────────────────────────────────

enum grade_item_type {
    ATTENDANCE
    CLASSROOM_PERFORMANCE
    ASSIGNMENT
    REPORT
    OTHER
}

enum attendance_status {
    PRESENT
    EXCUSED
    ABSENT
}

// ── Tables ───────────────────────────────────────────────────

Table semester {
    id            uuid      [pk]
    semester_name varchar   [not null]
    start_date    date      [not null]
    end_date      date      [not null]
    created_at    timestamp
    updated_at    timestamp
    deleted       boolean   [default: false, not null]
    deleted_at    timestamp
    active_status varchar   [note: "Computed column: CASE WHEN deleted = FALSE THEN 'ACTIVE' ELSE id END"]

    indexes {
        (semester_name, active_status) [unique]
    }
}

Table class {
    id                uuid    [pk]
    semester_id       uuid    [not null]
    class_name        varchar [not null]
    class_group       varchar [note: "Optional class group classification"]
    passing_threshold decimal [default: 60]
    created_at        timestamp
    updated_at        timestamp
    deleted           boolean [default: false, not null]
    deleted_at        timestamp
    active_status     varchar [note: "Computed column: CASE WHEN deleted = FALSE THEN 'ACTIVE' ELSE id END"]

    indexes {
        (semester_id, class_name, active_status) [unique]
    }
}

Table student {
    id             uuid    [pk]
    class_id       uuid    [not null]
    student_id     varchar [not null]
    student_number integer [not null]
    student_name   varchar [not null]
    email          varchar [not null]
    created_at     timestamp
    updated_at     timestamp
    deleted        boolean [default: false, not null]
    deleted_at     timestamp
    active_status  varchar [note: "Computed column: CASE WHEN deleted = FALSE THEN 'ACTIVE' ELSE id END"]

    indexes {
        (class_id, student_number, active_status) [unique]
        (student_id, active_status) [unique]
        (email, active_status) [unique]
    }
}

Table grade_item {
    id               uuid            [pk]
    class_id         uuid            [not null]
    item_name        varchar         [not null]
    item_type        grade_item_type [not null]
    item_date        date
    item_description varchar
    max_score        decimal         [default: 100, not null]
    weight           decimal         [default: 0, not null]
    created_at       timestamp
    updated_at       timestamp
    deleted          boolean         [default: false, not null]
    deleted_at       timestamp
}

Table grade_record {
    id               uuid    [pk]
    grade_item_id    uuid    [not null]
    student_id       uuid    [not null]
    score            decimal
    last_modified_at timestamp
    version          integer [default: 1, not null]
    created_at       timestamp
    updated_at       timestamp
    deleted          boolean [default: false, not null]
    deleted_at       timestamp
    active_status    varchar [note: "Computed column: CASE WHEN deleted = FALSE THEN 'ACTIVE' ELSE id END"]

    indexes {
        (grade_item_id, student_id, active_status) [unique]
    }
}

Table attachment {
    id              uuid    [pk]
    grade_record_id uuid    [not null]
    file_name       varchar [not null]
    mime_type       varchar [not null]
    file_size       integer [not null]
    file_data       blob    [not null]
    uploaded_at     timestamp
    created_at      timestamp
    updated_at      timestamp
    deleted         boolean [default: false, not null]
    deleted_at      timestamp
}

// ── Referential Integrity ─────────────────────────────────────

Ref: semester.id < class.semester_id [delete: cascade]
Ref: class.id < student.class_id [delete: cascade]
Ref: class.id < grade_item.class_id [delete: cascade]
Ref: grade_item.id < grade_record.grade_item_id [delete: cascade]
Ref: student.id < grade_record.student_id [delete: cascade]
Ref: grade_record.id < attachment.grade_record_id [delete: cascade]
